# vitals_v4_android

./: .gitignore  app-keystore-1-6.jks  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/vitals/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/vitals/app/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
v4/dev_bp/: build.gradle
v4/dev_bp/src/androidTest/java/com/vitals/dev/bp/: ExampleInstrumentedTest.kt
v4/dev_bp/src/main/: AndroidManifest.xml
v4/dev_bp/src/main/assets/: sig2_34_20240325204004925_tmp_28ccd766fed319ae2b93c441647597ad_2.csv
v4/dev_bp/src/main/java/com/vitals/dev/bp/: MainActivity.kt
v4/dev_bp/src/main/res/values/: strings.xml  themes.xml
v4/dev_bp/src/main/res/values-night/: themes.xml
v4/dev_bp/src/test/java/com/vitals/dev/bp/: ExampleUnitTest.kt
v4/example/: build.gradle  跨进程服务说明.md
v4/example/src/main/: AndroidManifest.xml
v4/example/src/main/aidl/com/vitals/example/: BloodPressureMeasureResult.aidl
v4/example/src/main/java/com/vitals/example/: DataBridge.kt  FaceActivity.kt  MainActivity.kt  ResultActivity.kt
v4/example/src/main/res/drawable/: progress.xml  star_activate.xml
v4/example/src/main/res/layout/: activity_main.xml
v4/example/src/main/res/values/: strings.xml
v4/example/src/test/java/com/vitals/example/: ExampleUnitTest.kt
v4/example_app/: build.gradle  proguard-rules.pro
v4/example_app/src/debug/: AndroidManifest.xml
v4/example_app/src/debug/java/com/vitals/example/: DevActivity.kt
v4/example_app/src/main/: AndroidManifest.xml
v4/example_app/src/main/aidl/com/vitals/example/: IBloodPressureAnalyzerService.aidl
v4/example_app/src/main/assets/: sig_json.txt
v4/example_app/src/main/java/com/vitals/example/: BloodPressureMeasureResult.java  DataBridge.kt  FaceActivity.kt  MainActivity.kt  ResultActivity.kt
v4/example_app/src/main/res/layout/: activity_face.xml  activity_main.xml  activity_result.xml
v4/example_app/src/main/res/values/: strings.xml
v4/example_service/: build.gradle
v4/example_service/src/androidTest/java/com/vitals/example/: ExampleInstrumentedTest.kt
v4/example_service/src/main/: AndroidManifest.xml
v4/example_service/src/main/java/com/vitals/example/: BloodPressureAnalyzerService.kt
v4/example_service/src/main/res/values/: colors.xml  strings.xml  themes.xml
v4/native_bp/: build.gradle  consumer-rules.pro  pgmap.txt  proguard-rules.pro
v4/native_bp/src/androidTest/java/com/vitals/native_lite/: ExampleInstrumentedTest.kt
v4/native_bp/src/main/aidl/com/vitals/sdk/parcel/: ParcelableVitalsSampledData.aidl
v4/native_bp/src/main/cpp/: CMakeLists.txt
v4/native_bp/src/main/cpp/pytorch_2.1.0/: CMakeLists.txt
v4/native_bp/src/main/cpp/pytorch_2.1.0/headers/caffe2/core/: macros.h
v4/native_bp/src/main/cpp/src/: log.hpp
v4/native_bp/src/main/cpp/src/algo/: aes.c  aes.h  binary_data_manager.cpp  binary_data_manager.hpp  bp_jni.cpp  bp_pred_v3.cpp  bp_pred_v3.hpp  bp_pred_v3_test.hpp  bp_prediction.cpp  bp_refer.hpp  fea_pred.cpp  fea_pred.h  jni_utils.cpp  jni_utils.h  json.hpp  log.hpp  measure_vital.cpp  performance.cpp  port_jni.cpp  process.h  signal_processing.hpp  struct.hpp  test_helper.hpp  utils.hpp
v4/native_bp/src/main/java/com/vitals/lib/: Port.kt  VitalsNativeException.kt
v4/native_bp/src/main/java/com/vitals/sdk/api/: BloodPressureAnalyzer.kt
v4/native_bp/src/main/java/com/vitals/sdk/bp/: LandmarkTransformer.kt  Native.kt
v4/native_bp/src/main/java/com/vitals/sdk/internal/: CryptoUtils.kt
v4/native_bp/src/main/java/com/vitals/sdk/parcel/: ParcelableVitalsSampledData.kt
v4/native_bp/src/test/java/com/vitals/native_lite/: ExampleUnitTest.kt
v4/native_unity/: build.gradle  consumer-rules.pro  pgmap.txt  proguard-rules.pro
v4/native_unity/src/main/cpp/: CMakeLists.txt  README.md
v4/native_unity/src/main/cpp/anti_spoofing/: CMakeLists.txt  face_detector_jni.cpp  img_process.cpp  img_process.h  jni_long_field.h  live_jni.cpp
v4/native_unity/src/main/cpp/anti_spoofing/detection/: face_detector.cpp  face_detector.h
v4/native_unity/src/main/cpp/anti_spoofing/live/: live.cpp
v4/native_unity/src/main/cpp/ncnn/: CMakeLists.txt
v4/native_unity/src/main/cpp/ncnn/include/ncnn/: allocator.h  benchmark.h  cpu.h  datareader.h  layer.h  mat.h
v4/native_unity/src/main/cpp/pytorch_2.1.0/headers/ATen/: Config.h
v4/native_unity/src/main/cpp/src/: log.hpp
v4/native_unity/src/main/cpp/src/algo/: bp_knn_model.hpp  bp_prediction.cpp  bp_prediction.hpp  measure_vital.cpp  measure_vital.hpp  performance.hpp  port_bridge.h  port_jni.cpp  process.cpp  process.h  signal_processing.cpp  signal_processing.hpp  test_helper.cpp
v4/native_unity/src/main/cpp/src/face/: face_landmarker.hpp  face_landmarker_jni.cpp  inspect_jni.cpp  jni_utils.cpp  jni_utils.h
v4/native_unity/src/main/cpp/src/lib/: core.cc  core.h  inspect.cc  inspect.h
v4/native_unity/src/main/cpp/tensorflowlite_c/: CMakeLists.txt
v4/native_unity/src/main/cpp/tensorflowlite_c/headers/tensorflow/lite/core/c/: c_api.h
v4/native_unity/src/main/java/com/mv/engine/: Component.kt  DetectionResult.kt  EngineWrapper.kt  FaceDetector.kt  Live.kt
v4/native_unity/src/main/java/com/vitals/lib/: Port.kt  VitalsNativeException.kt
v4/native_unity/src/main/java/com/vitals/lib/model/: VitalsModelManager.kt
v4/native_unity/src/main/java/com/vitals/sdk/lib/: FaceLandmarker.kt  FaceLandmarkerContract.kt  Image.kt  ReusePixelsExtractor.kt
v4/sdk/: build.gradle  consumer-rules.pro  dep_pgmap.txt  pgmap.txt  proguard-rules.pro
v4/sdk/src/androidTest/java/com/vitals/sdk/: ExampleInstrumentedTest.kt
v4/sdk/src/main/: AndroidManifest.xml
v4/sdk/src/main/java/com/tencent/mars/xlog/: Xlog.java
v4/sdk/src/main/java/com/vitals/sdk/api/: api.kt  imp.kt
v4/sdk/src/main/java/com/vitals/sdk/framework/: AbsSdkBase.kt  ActivateManager.kt  DeviceInfoManager.kt  (+13 more)
v4/sdk/src/test/java/com/vitals/sdk/: ExampleUnitTest.kt
(+32 files in other folders)
